--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-
+Date: 20-06-2020
   Info:
     - Initial release
+---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 28-06-2020
+  Bugfixes:
+    - Basic support loading into existing games
