--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.1.2
   Ease of use:
     - Warn that base dimensions are unknown if TLBE is laoded into an existing game
+    - Changed "speed increase" default to take one screenshot per minute
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 28-06-2020
