--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
-  Major Features:
+Date: 03-09-2020
+  Features:
     - Enable/Disable camera smoothness per tracker
     - Support pausing game when TLBE window is open
   Minor Features:
