Update camera tracker list when name changes while game is paused

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 03-09-2020
+  Bugfixes:
+    - Update camera tracker list when name changes while game is paused
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 03-09-2020
   Features:
