Fix crash when no entities are build but base camera is active

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+
+  Bugfixes:
+    - Fix crash when no entities are build but base camera is active
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 03-09-2020
   Bugfixes:
