Add Area Tracker (#11)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.1.3
+Version: 1.2.0
+  Features:
+    - Add Area Tracker
   Gui:
     - Fix width of tracker tab.
 
