Warn player(s) to enable camera on first (mod) start. (#16)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.2
+  Minor Features:
+    - Warn player(s) to enable camera on first (mod) start.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 22-09-2020
   Minor Features:
