--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.3
+Date: 29-12-2020
+  Features:
+    - updated to Factorio 1.1
+---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: 10-10-2020
   Minor Features:
