--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.2.3
-Date: 29-12-2020
+Version: 1.3.0
+Date: 05-01-2021
   Features:
-    - updated to Factorio 1.1
+    - Updated to Factorio 1.1
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: 10-10-2020
@@ -14,6 +15,7 @@ Date: 10-10-2020
       - Use disabled sprite-buttons for disabled buttons (instead of regular sprites).
       - Hide some disabled buttons.
     - Refresh tracker list when deleting camera or remove tracker from camera to reflect changes.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 22-09-2020
@@ -71,6 +73,7 @@ Version: 0.1.1
 Date: 28-06-2020
   Bugfixes:
     - Basic support loading into existing games.
+
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 20-06-2020
