--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+
+  Bugfixes:
+    - Fix crash due to script changing the settings.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 05-01-2021
   Features:
