--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
-
+Date: 31-01-2021
   Bugfixes:
     - Fix crash due to script changing the settings.
 
