--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.0
+
+  Minor Features:
+    - Add toggle/shortcut to pause all cameras.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 31-01-2021
   Bugfixes:
