--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Version: 1.4.0
   Features:
     - Configurable surface for each camera.
       Hint: The 'Area Tracker' seems most suitable for small surfaces, as used in for example Factorissimo2.
+    - Configurable surface for each tracker.
   Minor Features:
     - Add toggle/shortcut to pause all cameras.
 
