--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+
+  Bugfixes:
+    - Do not take vehicles into account for base size calculation. (Thanks fortysixandtwo)
+
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 08-02-2021
   Features:
