--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
-
+Date: 21-03-2021
   Bugfixes:
     - Do not take vehicles into account for base size calculation. (Thanks fortysixandtwo)
 
