--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+
+  GUI:
+    - Improve max-zoom message and add tooltops for camera settings.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 21-03-2021
   Bugfixes:
