--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
-
+Date: 27-07-2021
   GUI:
     - Improve max-zoom message and add tooltips for camera settings.
   Bugfixes:
