--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+
+---------------------------------------------------------------------------------------------------
+Version: 1.4.3
+
+  Bugfixes:
+    - Fix smooth zooming when user changed active tracker.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: 27-07-2021
