--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
-
+Date: 11-12-2021
   Bugfixes:
     - Fix smooth zooming when user changed active tracker.
 
