Support sub-directories

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+---------------------------------------------------------------------------------------------------
+Version: 1.4.4
+
+  Minor Features:
+    - Store screenshots in a sub-directory if the camera name contains a slash.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
