Use 10 digits for screenshot numbers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.6
+
+  Changes:
+    - Use 10 digits for screenshot numbers.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.4.5
 Date: 25-08-2022
   Minor Features:
