--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 1.5.0
 
   Features:
     - Add toggle/shortcut to take a screenshot (on paused active camera)
+    - Add option to include GUI in screenshots (requires to have same camera resolution as game/screen resolution to make this look good)
 
   Changes:
     - Use 10 digits for screenshot numbers.
