Fix migration error when loading existing saves with TBLE being newly installed
See #58

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.1
+
+  Bugfixes:
+    - Fix migration error when loading existing saves with TBLE being newly installed.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 01-08-2023
   Features:
