--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
-
+Date: 13-11-2023
   Bugfixes:
-    - Fix migration error when loading existing saves with TBLE being newly installed.
+    - Fix migration error when loading existing saves with TLBE being newly installed.
+    - Fixed small grammar mistakes. (Thanks Adix-null)
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
