Fix optional dependency on StatsGui

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.2
+
+  Bugfixes:
+    - Fix optional dependency on StatsGui.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: 13-11-2023
   Bugfixes:
