--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 1.5.2
 
   Minor Features:
     - Try to fix missing player data in order to be more flexible to unexpected situations.
+    - Add (per player) setting to use intervals (milliseconds) between frames instead of speed gain (factor).
   Bugfixes:
     - Fix optional dependency on StatsGui.
 
