Replace missing sprite for Area and CityBlock trackers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.1
+Date: 22-10-204
+  Bugfixes:
+    - Replace missing sprite for Area and CityBlock trackers.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 21-10-204
   Features:
