Fix changing camera dimensions

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.3
+
+  Bugfixes:
+    - Fix changing camera dimensions. (Thanks balukin)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 29-10-2024
   Bugfixes:
