--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
-
+Date: 29-10-2024
   Bugfixes:
     - Fix changing camera dimensions. (Thanks balukin)
 ---------------------------------------------------------------------------------------------------
