Fix race condition with StatsGUI
With the 'current' set of changes, it looks like StatsGUI is calling
recordingSensor before TLBE is notified that the player is created. This
causes issues as playerSettings is not yet initialized.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.4
+
+  Bugfixes:
+    - Fix race condition with StatsGUI.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 29-10-2024
   Bugfixes:
