--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
-
+Date: 07-11-2024
   Bugfixes:
     - Fix race condition with StatsGUI.
 ---------------------------------------------------------------------------------------------------
