--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 19-02-2025
+  Features:
+    - Add (per player) setting to automatically activate recording with main camera on new game
+    - Add (per player) setting to save screenshots in map seed named subdirectories
+    - Add (per player) setting to change screenshot format (png/jpg)
+  Bugfixes:
+    - Fix main camera producing screenshot files with wrong camera name
+---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: 07-11-2024
   Bugfixes:
