--- a/changelog.txt
+++ b/changelog.txt
@@ -2,11 +2,11 @@
 Version: 2.1.0
 Date: 19-02-2025
   Features:
-    - Add (per player) setting to automatically activate recording with main camera on new game
-    - Add (per player) setting to save screenshots in map seed named subdirectories
-    - Add (per player) setting to change screenshot format (png/jpg)
+    - Add (per player) setting to automatically activate recording with main camera on new game (Thanks thephluxer)
+    - Add (per player) setting to save screenshots in map seed named subdirectories (Thanks thephluxer)
+    - Add (per player) setting to change screenshot format (png/jpg) (Thanks thephluxer) 
   Bugfixes:
-    - Fix main camera producing screenshot files with wrong camera name
+    - Fix main camera producing screenshot files with wrong camera name (Thanks thephluxer)
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: 07-11-2024
