--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: 19-02-2025
     - Add (per player) setting to change screenshot format (png/jpg) (Thanks thephluxer) 
   Bugfixes:
     - Fix main camera producing screenshot files with wrong camera name (Thanks thephluxer)
+    - Remove left-over debug messages
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: 07-11-2024
