--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.1
+Date:
+  Bugfixes:
+    - New cameras/trackers will use player surface instead of hardcoded first surface.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 19-02-2025
   Features:
