--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 2.1.1
 Date:
   Bugfixes:
     - New cameras/trackers will use player surface instead of hardcoded first surface.
+    - Area markers are now searched for on the set surface of the Area Tracker
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 19-02-2025
