Initial Cube Tracker implementation

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.0
+  Features:
+    - Add a new Cube Tracker to track the Ultracube.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.1
 Date: 13-11-2025
   Bugfixes:
