--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
+Date: 17-11-2025
   Features:
     - Add a new Cube Tracker to track the Ultracube.
 ---------------------------------------------------------------------------------------------------
